added image upload and updated swagger.yaml modified index.js
