# swagger.yaml
@@ -1,46 +1,168 @@
 openapi: 3.0.0
-info: 
+
+info:
   title: E-commerce API
-  description: Creation of API for e-commerce store
-  version: 1.0.0
-  contact: 
-    email: paraspatil248@gmail.com
+  description: this is a documentation for e-commerce api where you can test the endpoints
+  version: 1.0.1
 
-servers: 
-  - url: "{protocol}://localhost:4000/api/{version}"
-    description: for localhost
-    variables: 
-      version:
-        enum: 
-          - v1
+servers:
+  - url: http://localhost:4000/api/v1
+    description: This server is for local host 
 
-        default: v1
-      protocol:
-        enum:
-          - http
-          - https
-        default: http
-
-components: 
-  securitySchemes:
-    cookieAuth:
-      type: apiKey
-      in: cookie
-      name: token
-    BearerAuth:
-      type: http
-      scheme: bearer
-
-paths: 
-  /dummy:
+paths:
+  /:
     get:
-      tags:
-        - Home page
-      summary: returns a greet from servers
+      tags: 
+        - Home Route
+      summary: Returns greet from servers
       responses: 
         200:
-          description: All good success
-        400: 
-          description: Bad request
+          description: SUCCESS
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  greetings: 
+                    type: string
+                    description: message
+        400:
+          description: BAD REQUEST
         500: 
-          description: internal server error
+          description: INTERNAL SERVER ERROR
+
+  /signup:
+    post:
+      tags:
+        - User
+      summary: To signup the user by filling details
+      requestBody:
+          required: true
+          content:
+            multipart/form-data:
+              schema:
+                type: object
+                properties:
+                  name: 
+                    type: string
+                  email: 
+                    type: string
+                  password:
+                    type: string
+                  photo: 
+                    type: string
+                    format: binary
+      responses:
+        201:
+          description: SUCCESS
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  token: 
+                    type: string
+                  user:
+                    type: object
+                    properties:
+                      name: 
+                        type: string
+                      email:
+                        type: string
+                      photo: 
+                        type: object
+                        properties:
+                          id:
+                            type: string
+                            description: photo id from cloudinary
+                          secure_url: 
+                            type: string
+                            description: url of the uploaded image
+                  role:
+                    type: string
+                  _id:
+                    type: string
+                    description: id of the document from the database
+                  createdAt: 
+                    type: string
+                    description: date
+                  _v: 
+                    type: string
+                    description: version                    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# openapi: 3.0.0
+# info: 
+#   title: E-commerce API
+#   description: Creation of API for e-commerce store
+#   version: 1.0.0
+#   contact: 
+#     email: paraspatil248@gmail.com
+
+# servers: 
+#   - url: "{protocol}://localhost:4000/api/{version}"
+#     description: for localhost
+#     variables: 
+#       version:
+#         enum: 
+#           - v1
+
+#         default: v1
+#       protocol:
+#         enum:
+#           - http
+#           - https
+#         default: http
+
+# components: 
+#   securitySchemes:
+#     cookieAuth:
+#       type: apiKey
+#       in: cookie
+#       name: token
+#     BearerAuth:
+#       type: http
+#       scheme: bearer
+
+# paths: 
+#   /dummy:
+#     get:
+#       tags:
+#         - Home page
+#       summary: returns a greet from servers
+#       responses: 
+#         200:
+#           description: All good success
+#         400: 
+#           description: Bad request
+#         500: 
+#           description: internal server error
